--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "nuxt": "^4.2.2",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.97.1"
   }
 }
