--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@unhead/vue": "^2.1.1",
     "eslint": "^9.39.2",
     "nuxt": "^4.2.2",
+    "shiki": "^1.0.0",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
